[gd_scene load_steps=15 format=2]

[ext_resource path="res://player/player.png" type="Texture" id=1]
[ext_resource path="res://player/Player.gd" type="Script" id=2]
[ext_resource path="res://Player/Informator.gd" type="Script" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 14.8201

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10.0685, 12.074 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "landing",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
} ]

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 3
script = ExtResource( 2 )
health = 250

[node name="Area" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape" type="CollisionShape2D" parent="Area"]
shape = SubResource( 1 )

[node name="CharacterShape" type="CollisionShape2D" parent="."]
z_as_relative = false
shape = SubResource( 2 )
one_way_collision_margin = 0.0

[node name="Informator" type="Node" parent="."]
script = ExtResource( 4 )

[node name="Camera" type="Camera2D" parent="."]
current = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true

[node name="TimerIgnis" type="Timer" parent="."]
one_shot = true

[node name="IgnisPosition" type="Position2D" parent="."]
position = Vector2( 9.26011, 2.70617 )

[node name="TimerHit" type="Timer" parent="."]
one_shot = true

[node name="AnimatedSprite1" type="AnimatedSprite" parent="."]
frames = SubResource( 11 )
animation = "landing"
[connection signal="area_entered" from="Area" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area" to="." method="_on_Area2D_area_exited"]
